force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>Lifecycle status of the contact. Used by lookup filters to exclude stale contacts from selection lists. Aligned with UAT feedback C-06.</description>
    <inlineHelpText>Active = currently engaged. Inactive = no longer at company or disengaged. Departed = confirmed left the organisation. Inactive and Departed contacts are excluded from lookup filters on BAN Billing Contact and Opportunity Contact Roles.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Departed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>