force-app/main/default/objects/Contact/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <description>Customer communication language preference.</description>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Traditional Chinese</fullName>
            </value>
            <value>
                <fullName>Simplified Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Bahasa Indonesia</fullName>
            </value>
            <value>
                <fullName>Tagalog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>