force-app/main/default/objects/Contact/fields/Migration_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source_Id__c</fullName>
    <description>BOSS contact reference for migration traceability. FLS hidden from Sales and Finance.</description>
    <externalId>true</externalId>
    <inlineHelpText>Contact reference ID from the legacy BOSS system. Used for migration traceability only. Do not edit.</inlineHelpText>
    <label>BOSS Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>