force-app/main/default/objects/Contact/fields/Odoo_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Partner_ID__c</fullName>
    <description>Odoo res.partner ID for this Contact (person-type partner). Written by the BAN integration when the Contact is synced as a billing contact.</description>
    <label>Odoo Partner ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>