force-app/main/default/objects/Contact/fields/Odoo_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sync_Status__c</fullName>
    <label>Odoo Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Failed - Manual Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>