force-app/main/default/objects/Contact/fields/Translated_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Name__c</fullName>
    <description>Contact name in the preferred local language, such as Japanese, Korean, Simplified Chinese, or Traditional Chinese.</description>
    <inlineHelpText>Enter the contact name in the language selected in Language Preference.</inlineHelpText>
    <label>Translated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>