force-app/main/default/objects/Contact/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <description>Every Contact must be associated with an Account. Orphaned contacts are not permitted in the DE data model. Contact visibility is Controlled by Parent (Account), so a contact without an Account would be invisible to all non-admin users.</description>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Every Contact must be associated with an Account.</errorMessage>
</ValidationRule>